Last portion of figures added

--- a/a1/report_lab1.ipynb
+++ b/a1/report_lab1.ipynb
@@ -256,6 +256,7 @@
    "metadata": {},
    "source": [
     "### 2.3 Comparison to Linear Regression\n",
+    "Following figure shows comparison between cross entropy and mse losses.\n",
     "![alt text](linear_log_compare.png)\n",
     "<center>Figure 8: cross entropy and MSE loss comparison ($\\alpha$ = 0.005, $\\lambda$ = 0)</center>\n",
     "<br><br><br>"
@@ -363,6 +364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Follosing figure shows a general case of minibatch size 500.\n",
     "![alt text](SGD_MSE_500.png)\n",
     "<center>Figure 9: SGD with a minibatch size of 500 (MSE, $\\lambda$ = 0)</center>\n",
     "<br><br><br>"
@@ -373,6 +375,7 @@
    "metadata": {},
    "source": [
     "### 3.3 Batch Size Investigation\n",
+    "Following figures show the effects on minibatch size changeing.\n",
     "![alt text](SGD_MSE_100.png)\n",
     "<center>Figure 10: SGD with a minibatch size of 100 (MSE, $\\lambda$ = 0)</center>\n",
     "<br><br><br>\n",
@@ -389,6 +392,7 @@
    "metadata": {},
    "source": [
     "### 3.4 Hyperparameter Investigation\n",
+    "Following figures show the effects on hyperparmeters.\n",
     "![alt text](SGD_MSE_BETA1.png)\n",
     "<center>Figure 13: SGD with $\\beta_{1}$ = 0.95, 0.99 (MSE, minibatch size 500)</center>\n",
     "<br><br><br>\n",
@@ -404,15 +408,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.5 Cross Entropy Loss Investigation"
+    "### 3.5 Cross Entropy Loss Investigation\n",
+    "Following figures show the losses calculated using cross entropy. The general demonstration uses minibatch size of 500. And the other hyperparameters investigation can be compared with those in Section 3.4.\n",
+    "![alt text](SGD_CE_500.png)\n",
+    "<center>Figure 16: SGD with a minibatch size of 500 (CE, $\\lambda$ = 0)</center>\n",
+    "<br><br><br>\n",
+    "![alt text](SGD_CE_BETA1.png)\n",
+    "<center>Figure 17: SGD with $\\beta_{1}$ = 0.95, 0.99 (CE, minibatch size 500)</center>\n",
+    "<br><br><br>\n",
+    "![alt text](SGD_CE_BETA2.png)\n",
+    "<center>Figure 18: SGD with $\\beta_{2}$ = 0.99, 0.9999 (CE, minibatch size 500)</center>\n",
+    "<br><br><br>\n",
+    "![alt text](SGD_CE_EPI.png)\n",
+    "<center>Figure 19: SGD with $\\epsilon$ = 1e-9, 1e-4 (CE, minibatch size 500)</center>\n",
+    "<br><br><br>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.6 Comparison against Batch GD"
+    "### 3.6 Comparison against Batch GD\n",
+    "Comparison between CE batch gradient descent and SGD:\n",
+    "![alt](log_loss_acc.png)\n",
+    "<center>Figure 7: losses and accuracy on all data (CE)</center>\n",
+    "![alt](SGD_CE_500.png)\n",
+    "<center>Figure 16: SGD with a minibatch size of 500 (CE)</center>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
