--- a/a1/report_lab1.ipynb
+++ b/a1/report_lab1.ipynb
@@ -148,7 +148,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.5 Comparing Batch GD with normal equation"
+    "### 1.5 Comparing Batch GD with normal equation\n",
+    "We compared the result from normal equation and that from BGD with $\\alpha$ = 0.005 and $\\lambda$ = 0.001. Following table shows the results.\n",
+    "<br><br>\n",
+    "\n",
+    "<center>Table 3: Comparison between normal equation and BGD on computation time, losses and accuracy</center>\n",
+    "\n",
+    "| | Computation time (s) | training MSE loss | accuracy on training data |accuracy on validation data|accuracy on test data|\n",
+    "| --- | --- | --- |\n",
+    "| Normal equation | 0.261 | 0.00935 | 0.993 | 0.96 | 0.944 |\n",
+    "| Batch GD | 16.876 | 0.01365 | 0.978 | 0.98 | 0.972 |"
    ]
   },
   {
