--- a/a1/report_lab1.ipynb
+++ b/a1/report_lab1.ipynb
@@ -112,6 +112,9 @@
     "| $\\alpha$ = 0.005 | 0.758 | 0.67 | 0.744 |\n",
     "| $\\alpha$ = 0.001 | 0.649 | 0.61 | 0.572 |\n",
     "| $\\alpha$ = 0.0001 | 0.554 | 0.57 | 0.544 |\n"
+    "\n",
+    "\n",
+    "By comparing the losses which are generated with different $\\alpha$, as $\\alpha$ decreases, the losses are more convex.\n"
    ]
   },
   {
