--- a/a1/report_lab1.ipynb
+++ b/a1/report_lab1.ipynb
@@ -111,7 +111,10 @@
     "| --- | --- | --- |\n",
     "| $\\alpha$ = 0.005 | 0.758 | 0.67 | 0.744 |\n",
     "| $\\alpha$ = 0.001 | 0.649 | 0.61 | 0.572 |\n",
-    "| $\\alpha$ = 0.0001 | 0.554 | 0.57 | 0.544 |\n"
+    "| $\\alpha$ = 0.0001 | 0.554 | 0.57 | 0.544 |\n",
+    "\n",
+    "By modifying the $\\alpha$ with 5000 itertations, all three losses plot indicate the similiar tendency that the loss decrease gradually with more iterations. The plot with larger $\\alpha$ is more convex than the smaller ones, the loss decrease more rapidly with a larger $\\alpha$ than smaller ones. \n",
+    "For the final accuracy result, the accuracy keeps decreasing as $\\alpha$ is decreasing with same number of iterations(in this case, 5000 iterations), because it takes more time to low the loss when the $\\alpha$ is small, and more iterations are needed to low the loss for a smaller $\\alpha$. \n"
    ]
   },
   {
