--- a/a1/report_lab1.ipynb
+++ b/a1/report_lab1.ipynb
@@ -144,7 +144,9 @@
     "| --- | --- | --- |\n",
     "| $\\lambda$ = 0.001 | 0.763 | 0.68 | 0.751 |\n",
     "| $\\lambda$ = 0.1 | 0.977 | 0.98 | 0.965 |\n",
-    "| $\\lambda$ = 0.5 | 0.976 | 0.97 | 0.965 |"
+    "| $\\lambda$ = 0.5 | 0.976 | 0.97 | 0.965 |",
+    "\n",
+    "The larger regularization paramer will result in higher initial value, however, the loss will decrease quickly until it approach zero. \n"
    ]
   },
   {
@@ -160,7 +162,9 @@
     "| | Computation time (s) | training MSE loss | accuracy on training data |accuracy on validation data|accuracy on test data|\n",
     "| --- | --- | --- |\n",
     "| Normal equation | 0.261 | 0.00935 | 0.993 | 0.96 | 0.944 |\n",
-    "| Batch GD | 16.876 | 0.01365 | 0.978 | 0.98 | 0.972 |"
+    "| Batch GD | 16.876 | 0.01365 | 0.978 | 0.98 | 0.972 |",
+    "\n",
+    "From the table above, the computation time of Normal equation is much less than Batch GD. Normal equiation also generates a lower training MSE loss than Batch GD. The accuracy of two different method is similiar, the Normal equation(accuracy = 0.993) is slightly more accurate than the Batch GD(accuracy = 0.978) in this case. However, if comparing the accruacy result using validation and test datasets, Batch GD has slightly higher performance due to higher accuracy value. \n"
    ]
   },
   {
@@ -271,7 +275,9 @@
     "Following figure shows comparison between cross entropy and mse losses.\n",
     "![alt text](linear_log_compare.png)\n",
     "<center>Figure 8: cross entropy and MSE loss comparison ($\\alpha$ = 0.005, $\\lambda$ = 0)</center>\n",
-    "<br><br><br>"
+    "<br><br><br>",
+    "\n",
+    "From the figure, the value MSE losses is higher than the CE losses at each iteration. However, the difference between two methods rapidly decrease as more iteration computed, and both MSE and CE will gradually approach to zero. MSE has a much higher initial value than CE but drop quickly. Both MSE and CE are convex, CE triggers earlier than MSE. \n"
    ]
   },
   {
