--- a/a1/report_lab1.ipynb
+++ b/a1/report_lab1.ipynb
@@ -450,8 +450,10 @@
     "Comparison between CE batch gradient descent and SGD:\n",
     "![alt](log_loss_acc.png)\n",
     "<center>Figure 7: losses and accuracy on all data (CE)</center>\n",
+    "<br><br><br>\n",    
+    "![alt](SGD_CE_500.png)\n",
     "<center>Figure 16: SGD with a minibatch size of 500 (CE)</center>"
-   ]
+    "<br><br><br>\n"   ]
   },
   {
    "cell_type": "code",
