--- a/a1/report_lab1.ipynb
+++ b/a1/report_lab1.ipynb
@@ -135,7 +135,7 @@
     "| $\\lambda$ = 0.001 | 0.763 | 0.68 | 0.751 |\n",
     "| $\\lambda$ = 0.1 | 0.977 | 0.98 | 0.965 |\n",
     "| $\\lambda$ = 0.5 | 0.976 | 0.97 | 0.965 |\n",
-    "The larger regularization paramer will result in higher initial value, however, the loss will decrease quickly until it approach zero. \n"
+    "The larger regularization parameter will result in higher initial value, however, the loss will decrease much quicklier until it approach zero. The higher regularization parameter reduces the value of coefficients and the variance to avoid overfitting\n"
    ]
   },
   {
