--- a/a1/report_lab1.ipynb
+++ b/a1/report_lab1.ipynb
@@ -408,9 +408,12 @@
     "![alt text](SGD_MSE_EPI.png)\n",
     "<center>Figure 15: SGD with $\\epsilon$ = 1e-9, 1e-4 (MSE, minibatch size 500)</center>\n",
     "<br><br><br>\n",
-    "(a) Higher $\\beta_{1}$ results in a poorer performance of training accuracy, it's more flunctuated at the begining of the process but tends to process in a flat ratio.\n",
-    "(b) higher $\\beta_{2}$ results in a poorer perfotmance of training accuracy, all three accuracies are relatively less convex.\n",
-    "(c) Higher $\\epsilon$ results in a better performance of training accuracy, the validation and test accuracy are more fitted. \n"
+    "(a) Higher $\\beta_{1}$ results in a poorer performance of training accuracy, it's more flunctuated at the begining of the process but tends to process in a flat ratio.",
+    "\n",
+    "(b) higher $\\beta_{2}$ results in a poorer perfotmance of training accuracy, all three accuracies are relatively less convex.",
+    "\n",
+    "(c) Higher $\\epsilon$ results in a better performance of training accuracy, the validation and test accuracy are more fitted.",
+    "\n"
    ]
   },
   {
