--- a/a1/report_lab1.ipynb
+++ b/a1/report_lab1.ipynb
@@ -252,7 +252,8 @@
     "\n",
     "![alt text](log_loss_acc.png)\n",
     "<center>Figure 7: losses and accuracy on all data with $\\alpha$ = 0.005, $\\lambda$ = 0.1</center>\n",
-    "<br><br><br>"
+    "<br><br><br>\n",
+    "Comment: Using logistic performance, the loss can approach to zero while the accuracy is approach to one. \n"
    ]
   },
   {
@@ -390,7 +391,7 @@
     "![alt text](SGD_MSE_1750.png)\n",
     "<center>Figure 12: SGD with a minibatch size of 1750 (MSE, $\\lambda$ = 0)</center>\n",
     "<br><br><br>\n",
-    "The above cases indicate that accuracy decreses with increasing batch sizes. With larger batch size, the training accuracy becomes less convex, the validation and test accuracy becomes more flunctuated and overfitted. The larger batch size will cause more cycles of computation through each iteration, and it tends to converge to sharper minimals which cause the poorer generalization. \n"
+    "The above cases indicate that accuracy decreses(from near one to 0.9 to less than 0.75) with increasing batch sizes. With larger batch size, the training accuracy becomes less convex, the validation and test accuracy becomes more vibrated. The larger batch size will cause more cycles of computation through each iteration to slow down the change rate, however, the larger batch size reduce more noise. \n"
    ]
   },
   {
@@ -408,12 +409,13 @@
     "![alt text](SGD_MSE_EPI.png)\n",
     "<center>Figure 15: SGD with $\\epsilon$ = 1e-9, 1e-4 (MSE, minibatch size 500)</center>\n",
     "<br><br><br>\n",
-    "(a) Higher $\\beta_{1}$ results in a poorer performance of training accuracy, it's more flunctuated at the begining of the process but tends to process in a flat ratio.",
+    "(a) Higher $\\beta_{1}$ results in a relatively poorer performance of training accuracy(from over 85% decrease to less than 85%), it's more flunctuated at the begining of the process but tends to increase in a flat rate. However there's less noise with higher value",
     "\n",
-    "(b) higher $\\beta_{2}$ results in a poorer perfotmance of training accuracy, all three accuracies are relatively less convex.",
+    "(b) higher $\\beta_{2}$ results in a poorer perfotmance of training accuracy(from approach 1 decrease to appoximately 0.9), all three accuracies are relatively less convex.",
     "\n",
-    "(c) Higher $\\epsilon$ results in a better performance of training accuracy, the validation and test accuracy are more fitted.",
-    "\n"
+    "(c) Higher $\\epsilon$ results in a better performance of training accuracy(from less than 0.85 to over 0.85), the validation and test accuracy are more fitted.",
+    "\n",
+    "From the figures above, the increasing $\\beta_{1}$ and $\\beta_{2}$ take longer time to update results and increase the accuracy because they indicate the decay rate,  the large decay rate may cause overfitting. The $\\epsilon$ value is to prevent divided by zero, the higher $\\epsilon$ it is, the less possibilities that the zero division occuerrs.
    ]
   },
   {
