--- a/a1/report_lab1.ipynb
+++ b/a1/report_lab1.ipynb
@@ -415,7 +415,7 @@
     "\n",
     "(c) Higher $\\epsilon$ results in a better performance of training accuracy(from less than 0.85 to over 0.85), the validation and test accuracy are more fitted.",
     "\n",
-    "From the figures above, the increasing $\\beta_{1}$ and $\\beta_{2}$ take longer time to update results and increase the accuracy because they indicate the decay rate,  the large decay rate may cause overfitting. The $\\epsilon$ value is to prevent divided by zero, the higher $\\epsilon$ it is, the less possibilities that the zero division occuerrs.
+    "From the figures above, the increasing $\\beta_{1}$ and $\\beta_{2}$ take longer time to update results and increase the accuracy because they indicate the decay rate,  the large decay rate may cause overfitting. The $\\epsilon$ value is to prevent divided by zero, the higher $\\epsilon$ it is, the less possibilities that the zero division occuerrs. \n"
    ]
   },
   {
@@ -449,7 +449,8 @@
     "<center>Figure 7: losses and accuracy on all data (CE)</center>\n",
     "<br><br><br>\n",
     "![alt](SGD_CE_500.png)\n",
-    "<center>Figure 16: SGD with a minibatch size of 500 (CE)</center>\n"
+    "<center>Figure 16: SGD with a minibatch size of 500 (CE)</center>\n",
+    "Generally, these two methods show similiar tendencies in performance and losses but SGD is more convex than Batch GD. For the accuracy, both SGD and Batch GD increase dramatically first and slowly approach to 1, the validation and test accuracy are almost fitting. In terms of losses, the results generated with the SGD algorithm is converage faster than Batch GD as well, it decrease quickly to a small value and gradually approach to zero while the Batch GD performs like a concave curve. Batch GD run the whole datasets to do a single update for a parameter each iteration while SGD only run one subset of sample sets, so the Batch GD may take more time to minimize the error if the dataset is large in size. \n"   
    ]
   },
   {
