--- a/a1/report_lab1.ipynb
+++ b/a1/report_lab1.ipynb
@@ -391,8 +391,6 @@
     "![alt text](SGD_MSE_1750.png)\n",
     "<center>Figure 12: SGD with a minibatch size of 1750 (MSE, $\\lambda$ = 0)</center>\n",
     "<br><br><br>\n",
-    "The above cases indicate that accuracy decreses(from near one to 0.9 to less than 0.75) with increasing batch sizes. With larger batch size, the training accuracy becomes less convex, the validation and test accuracy becomes more vibrated. The larger batch size will cause more cycles of computation through each iteration to slow down the change rate, however, the larger batch size reduce more noise. \n",
-    "\n",
     "<center>Table 4: Final Accuracy for batch size = 100, 500, 700, 1750 respecively</center>\n",
     "\n",
     "| Batch size |Training accuracy | Validation accuracy | Test accuracy |\n",
@@ -401,6 +399,8 @@
     "| 500 | 0.888 | 0.888 | 0.813 |\n",
     "| 700 | 0.901 | 0.87 | 0.882 | \n",
     "| 1750 | 0.745 | 0.72 | 0.717 |\n",
+    "\n",
+    "The above cases indicate that accuracy decreses(from 0.984 to 0.745) with increasing batch sizes. With larger batch size, the training accuracy becomes less convex, the validation and test accuracy becomes more vibrated. The larger batch size will cause more cycles of computation through each iteration to slow down the change rate, however, the larger batch size reduce more noise. \n",
     "\n"
    ]
   },
