--- a/a1/report_lab1.ipynb
+++ b/a1/report_lab1.ipynb
@@ -370,7 +370,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Follosing figure shows a general case of minibatch size 500.\n",
+    "Following figure shows a general case of minibatch size 500.\n",
     "![alt text](SGD_MSE_500.png)\n",
     "<center>Figure 9: SGD with a minibatch size of 500 (MSE, $\\lambda$ = 0)</center>\n",
     "<br><br><br>"
@@ -419,11 +419,6 @@
     "![alt text](SGD_MSE_EPI.png)\n",
     "<center>Figure 15: SGD with $\\epsilon$ = 1e-9, 1e-4 (MSE, minibatch size 500)</center>\n",
     "<br><br><br>\n",
-    "(a) Higher $\\beta_{1}$ results in a relatively poorer performance of training accuracy(from over 85% decrease to less than 85%), it's more flunctuated at the begining of the process but tends to increase in a flat rate. However there's less noise with higher value\n",
-    "(b) higher $\\beta_{2}$ results in a poorer perfotmance of training accuracy(from approach 1 decrease to appoximately 0.9), all three accuracies are relatively less convex.\n",
-    "(c) Higher $\\epsilon$ results in a better performance of training accuracy(from less than 0.85 to over 0.85), the validation and test accuracy are more fitted.\n",
-    "From the figures above, the increasing $\\beta_{1}$ and $\\beta_{2}$ take longer time to update results and increase the accuracy because they indicate the decay rate,  the large decay rate may cause overfitting. The $\\epsilon$ value is to prevent divided by zero, the higher $\\epsilon$ it is, the less possibilities that the zero division occuerrs. \n",
-    "\n",
     "<center>Table 5: Final Accuracy for $\\beta_{1}$ = 0.95, 0.99</center>\n",
     "\n",
     "|  |Training accuracy | Validation accuracy | Test accuracy |\n",
@@ -444,6 +439,11 @@
     "| --- |--- | --- | --- |\n",
     "| $\\epsilon$ = 1e-9 | 0.84 |  0.82|  0.75|  \n",
     "| $\\epsilon$ = 1e-4 | 0.88 | 0.85 | 0.80 |  \n",
+    "\n",
+    "(a) Higher $\\beta_{1}$ results in a relatively poorer performance of training accuracy(decrease from 0.871 to 0.825), it's more flunctuated at the begining of the process but tends to increase in a flat rate. However there's less noise with higher value. \n",
+    "(b) higher $\\beta_{2}$ results in a poorer perfotmance of training accuracy(decrease from 0.961 to 0.894), all three accuracies are relatively less convex.\n",
+    "(c) Higher $\\epsilon$ results in a better performance of training accuracy(increase from 0.84 to 0.88), the validation and test accuracy are more fitted.\n",
+    "From the figures above, the increasing $\\beta_{1}$ and $\\beta_{2}$ take longer time to update results and increase the accuracy because they indicate the decay rate,  the large decay rate may cause overfitting. The $\\epsilon$ value is to prevent divided by zero, the higher $\\epsilon$ it is, the less possibilities that the zero division occuerrs. \n",
     "\n"
    ]
   },
