--- a/a1/report_lab1.ipynb
+++ b/a1/report_lab1.ipynb
@@ -254,7 +254,7 @@
     "![alt text](log_loss_acc.png)\n",
     "<center>Figure 7: losses and accuracy on all data with $\\alpha$ = 0.005, $\\lambda$ = 0.1</center>\n",
     "<br><br><br>\n",
-    "Comment: Using logistic performance, the loss can approach to zero while the accuracy is approach to one. \n"
+    "Comment: Using logistic regression, the loss can approach to zero while the accuracy is approaching to one. \n"
    ]
   },
   {
